// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ae huge 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 35;
  line-height: 35px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingTop": "15px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
          role="heading"
        >
          This is tile headline
        </div>
        <div
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
        >
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          >
            
            Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
            ...
          </div>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ae medium 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 30;
  line-height: 30px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingTop": "15px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
          role="heading"
        >
          This is tile headline
        </div>
        <div
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
        >
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          >
            
            Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
            ...
          </div>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ae wide 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 30;
  line-height: 30px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingTop": "15px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
          role="heading"
        >
          This is tile headline
        </div>
        <div
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
        >
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          >
            
            Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
            ...
          </div>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ae without breakpoint should be like medium 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 30;
  line-height: 30px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingTop": "15px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
      >
        <div
          className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <div
          aria-level="3"
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
          role="heading"
        >
          This is tile headline
        </div>
        <div
          className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
        >
          <div
            className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
          >
            
            Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
            ...
          </div>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </div>
    </div>
  </div>
</Link>
`;
